--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&family=Poppins:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Allison&family=Raleway:wght@400;500;700&display=swap');
 
 * {
     margin: 0;
@@ -56,7 +56,7 @@ body {
 .collapseCover {
     animation-name: collapseCover;
     animation-timing-function: cubic-bezier(.14,.54,.6,1);
-    animation-fill-mode: forwards;
+    animation-fill-mode: both;
 }
 
 @keyframes lightsOut {
