--- a/src/styles/skillbar.module.css
+++ b/src/styles/skillbar.module.css
@@ -9,7 +9,7 @@
 }
 
 .skillContainer h4 {
-    font-family: 'Maven Pro', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 20px;
 }
 
@@ -58,48 +58,8 @@
 }
 
 
-  @media only screen and (max-width: 600px) {
-    .skillContainer {
-        width: 100%;
-        margin: 1vh 0;
-    
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-    }
-    
+@media only screen and (max-width: 600px) {
     .skillContainer h4 {
-        font-family: 'Maven Pro', sans-serif;
         font-size: 3.5vw;
     }
-    
-    .skillContainer .skillBar {
-        margin-top: 0.5vh;
-    
-        width: 100%;
-        height: 25px;
-    
-        border: 1px solid var( --accent-color );
-        border-radius: 20px;
-        
-    }
-    
-    .skillContainer .skillBar .skillBarFiller {
-        height: 25px;
-    
-        border-radius: 20px;
-        
-    }
-    
-    .skillContainer .skillBar .skillBarFiller .progressBar {
-        height: 25px;
-    
-        animation: progressBar 3s ease-in-out;
-        animation-fill-mode:both; 
-    
-        background-color: var( --accent-color );
-        border-radius: 20px;
-        
-    }
-  }
+}
